[package]
name = "spaw"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.13.1", features = ["derive"] }
env_logger = "0.10.0"
flume = "0.10.14"
image = "0.24.6"
log = "0.4.18"
tokio = { version = "1.28.2", features = ["full"] }
wgpu = "0.16.1"
winit = "0.28.6"
