[package]
name = "spaw"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
bytemuck = { version = "1.13.1", features = ["derive"] }
env_logger = "0.10.0"
flume = "0.10.14"
futures = "0.3.28"
image = "0.24.6"
log = "0.4.18"
rand = "0.8.5"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
spin_sleep = "1.1.1"
wgpu = "0.16.1"
winit = "0.28.6"
